# cpp-tetris

./: .gitignore  README.md
Libs/: CMakeLists.txt
Libs/FileSettingsLib/: CMakeLists.txt  file_manager.cpp  file_manager.h
Libs/KeyboardTranslater/: CMakeLists.txt  english.h  keyboard_translater.cpp  keyboard_translater.h
include/: config.h  english.h  file_manager.h  keyboard_translater.h  st.rc
launcher/: CMakeLists.txt  main.cpp
settings/: CMakeLists.txt  common.h  main.cpp  rect.cpp
src/: .$supertetris.drawio.bkp  CMakeLists.txt  barrel.h  commands.hpp  common.cpp  common.h  main.cpp  shapes.cpp  shapes.h  supertetris.cpp  supertetris.drawio  supertetris.h
tests/: CMakeLists.txt  main.cpp  test.h  test_shapes.h  unit_tests.h
